--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,39 @@
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "bundle/ctrlp.vim"]
+	path = bundle/ctrlp.vim
+	url = https://github.com/kien/ctrlp.vim.git
+[submodule "bundle/lusty"]
+	path = bundle/lusty
+	url = https://github.com/sjbach/lusty.git
+[submodule "bundle/nerdcommenter"]
+	path = bundle/nerdcommenter
+	url = https://github.com/scrooloose/nerdcommenter.git
+[submodule "bundle/nerdtree"]
+	path = bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
+[submodule "bundle/PDV--phpDocumentor-for-Vim"]
+	path = bundle/PDV--phpDocumentor-for-Vim
+	url = https://github.com/tobyS/vip.git
+[submodule "bundle/phpfolding.vim"]
+	path = bundle/phpfolding.vim
+	url = https://github.com/jesstelford/phpfolding.vim.git
+[submodule "bundle/Rainbow-Parenthesis"]
+	path = bundle/Rainbow-Parenthesis
+	url = https://github.com/spahl/rainbow_parentheses.vim.git
+[submodule "bundle/sparkup"]
+	path = bundle/sparkup
+	url = https://github.com/rstacruz/sparkup.git
+[submodule "bundle/tagbar"]
+	path = bundle/tagbar
+	url = https://github.com/majutsushi/tagbar.git
+[submodule "bundle/vim-buffergator"]
+	path = bundle/vim-buffergator
+	url = https://github.com/vim-scripts/Buffergator.git
+[submodule "bundle/vim-easymotion"]
+	path = bundle/vim-easymotion
+	url = https://github.com/Lokaltog/vim-easymotion.git
+[submodule "bundle/vim-surround"]
+	path = bundle/vim-surround
+	url = https://github.com/tpope/vim-surround.git
