--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,14 @@
 unbind C-b
 set -g prefix C-a
 set -g base-index 1
-setw -g mode-keys vi
 
 bind-key C-a last-window
+
+" vi style bindings, copy/paste
+setw -g mode-keys vi
+bind [ copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'V' rectangle-toggle
+bind-key -t vi-copy 'y' copy-selection
