Add forked codepath to repo as submodule. Update rsync plugin to be compatible with new argument for codepath#path

--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/bundle/xptemplate"]
 	path = vim/bundle/xptemplate
 	url = git://github.com/drmingdrmer/xptemplate.git
+[submodule "vim/bundle/codepath.vim"]
+	path = vim/bundle/codepath.vim
+	url = https://github.com/afishnamedsquish/codepath.vim.git
