Add vim-abolish plugin.

--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "vim/bundle/tComment"]
 	path = vim/bundle/tComment
 	url = git://github.com/vim-scripts/tComment.git
+[submodule "vim/bundle/vim-abolish"]
+	path = vim/bundle/vim-abolish
+	url = https://github.com/tpope/vim-abolish.git
