--- a/osx/tmux.conf
+++ b/osx/tmux.conf
@@ -7,3 +7,5 @@ set -g base-index 1
 set-option -g default-command "reattach-to-user-namespace -l bash"
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind p run "tmux paste-buffer"
+
+bind a send-prefix
