--- a/osx/tmux.conf
+++ b/osx/tmux.conf
@@ -8,4 +8,13 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind p run "tmux paste-buffer"
 
+# Enable Ctrl-a a to return to beginning of line
 bind a send-prefix
+
+# Enable mouse support in ~/.tmux.conf
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-window-option -g mode-mouse on
+
+# Set default shell
+set-option -g default-command "reattach-to-user-namespace -l zsh"
