--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,17 @@
-/Users/vtdesignworks/dotfiles/osx/tmux.conf
+set-option -g prefix C-a
+unbind-key C-b
+
+setw -g mode-keys vi
+set -g base-index 1
+
+bind y run "tmux save-buffer"
+bind p run "tmux paste-buffer"
+
+# Enable Ctrl-a a to return to beginning of line
+bind a send-prefix
+
+# Enable mouse support in ~/.tmux.conf
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-window-option -g mode-mouse on
+
