[tmux] bind y to copy to system clipboard.

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,8 @@ unbind-key C-b
 setw -g mode-keys vi
 set -g base-index 1
 
-bind y run "tmux save-buffer"
+bind -t vi-copy y copy-pipe "xclip -selection clipboard"
+# bind y run "tmux save-buffer"
 bind p run "tmux paste-buffer"
 
 # Enable Ctrl-a a to return to beginning of line
@@ -14,4 +15,3 @@ bind a send-prefix
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
-
