--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
+set-option -g default-shell $SHELL
 set-option -g prefix C-a
+set escape-time 0
 unbind-key C-b
 
 setw -g mode-keys vi
@@ -12,6 +14,8 @@ bind p run "tmux paste-buffer"
 bind a send-prefix
 
 # Enable mouse support in ~/.tmux.conf
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+# set-option -g mouse-select-pane on
+# set-option -g mouse-select-window on
+# set-window-option -g mode-mouse on
+set -g mouse-utf8 on
+set -g mouse on
