--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,8 @@ bind -t vi-copy y copy-pipe "xclip -selection clipboard"
 # bind y run "tmux save-buffer"
 bind p run "tmux paste-buffer"
 
+bind space next-layout
+
 # Enable Ctrl-a a to return to beginning of line
 bind a send-prefix
 
@@ -19,3 +21,5 @@ bind a send-prefix
 # set-window-option -g mode-mouse on
 set -g mouse-utf8 on
 set -g mouse on
+
+set-option -g allow-rename off
